--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
             android:layout_width="@dimen/medium_icon_size"
             android:layout_height="@dimen/big_icon_size"
             android:layout_marginStart="@dimen/common_marginStartEnd"
-            android:background="@drawable/ic_sun"
+            android:background="@drawable/ic_rain"
             android:contentDescription="@string/current_weather" />
 
         <LinearLayout
@@ -106,7 +106,8 @@
                 android:id="@+id/tv_current_weather_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Light air" />
+                android:text="Light air"
+                android:textSize="@dimen/label_text_size"/>
         </LinearLayout>
     </LinearLayout>
 
