--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_refresh_layout"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -72,8 +72,9 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/card_view_marginStartEnd"
             android:layout_marginTop="@dimen/card_view_marginTop"
             android:gravity="center"
             android:orientation="horizontal">
@@ -83,36 +84,47 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
+                android:textAlignment="textEnd"
                 android:text="25°C"
                 android:textSize="@dimen/big_text_size" />
 
-            <ImageView
-                android:id="@+id/iv_current_weather"
-                android:layout_width="@dimen/medium_icon_size"
-                android:layout_height="@dimen/big_icon_size"
-                android:layout_marginStart="@dimen/common_marginStartEnd"
-                android:layout_marginEnd="@dimen/id_image_marginEnd"
-                android:contentDescription="@string/current_weather" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:gravity="center"
+                android:layout_gravity="top"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tv_current_weather"
+                <ImageView
+                    android:id="@+id/iv_current_weather"
+                    android:layout_width="@dimen/big_icon_size"
+                    android:layout_height="@dimen/big_icon_size"
+                    android:layout_marginStart="@dimen/common_marginStartEnd"
+                    android:layout_marginEnd="@dimen/id_image_marginEnd"
+                    android:contentDescription="@string/current_weather" />
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Sunny"
-                    android:textSize="@dimen/value_text_size" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_current_weather_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Light air"
-                    android:textSize="@dimen/label_text_size" />
+                    <TextView
+                        android:id="@+id/tv_current_weather"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="Sunny"
+                        android:textSize="@dimen/value_text_size" />
+
+                    <TextView
+                        android:id="@+id/tv_current_weather_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Light air"
+                        android:textSize="@dimen/label_text_size" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
