--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="dark_orange">#A54800</color>
+    <color name="dark_orange">#AF5108</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -12,6 +12,6 @@
     <color name="primary_text_color">#272727</color>
     <color name="secondary_text_color">#474747</color>
     <color name="divider_text_color">#D6D6D6</color>
-    <color name="orange">#EB5F19</color>
+    <color name="orange">#D1591D</color>
 
 </resources>
