--- a/app/src/main/res/layout/item_hourly_forecast.xml
+++ b/app/src/main/res/layout/item_hourly_forecast.xml
@@ -13,11 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="15:00"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/iv_weather"
         android:layout_width="@dimen/medium_icon_size"
         android:layout_height="@dimen/medium_icon_size"
         android:src="@drawable/ic_partly_cloudy"
@@ -26,6 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_time" />
 
     <TextView
+        android:id="@+id/tv_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="24 °C"
