Fix multiple response after starting the app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -149,7 +149,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center">
 
                 <ImageView
                     android:id="@+id/iv_feels_like"
@@ -310,7 +311,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_hourly"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="6dp"
+                android:scrollbars="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" />
