--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,16 +2,14 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="dark_orange">#AF5108</color>
+    <color name="dark_orange">#803C08</color>
+    <color name="orange">#D1591D</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#1C1C1C</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="main_screen_background_color">#EAEAEA</color>
-    <color name="primary_text_color">#272727</color>
-    <color name="secondary_text_color">#474747</color>
-    <color name="divider_text_color">#D6D6D6</color>
-    <color name="orange">#D1591D</color>
+    <color name="light_grey">#C4C4C4</color>
+    <color name="dark_grey">#313131</color>
 
 </resources>
