--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,11 +14,15 @@
 
     <dimen name="big_icon_size">50dp</dimen>
     <dimen name="medium_icon_size">30dp</dimen>
+    <dimen name="daily_icon_size">26dp</dimen>
+
     <dimen name="id_image_marginEnd">4dp</dimen>
 
     <dimen name="label_text_size">13sp</dimen>
     <dimen name="value_text_size">16sp</dimen>
     <dimen name="hourly_text_size">18sp</dimen>
+    <dimen name="small_icon_size">20dp</dimen>
+    <dimen name="pressure_icon_size">15dp</dimen>
 
     <dimen name="common_marginStartEnd">24dp</dimen>
 
@@ -26,8 +30,6 @@
     <dimen name="divider_margin">26dp</dimen>
 
     <dimen name="big_text_size">74sp</dimen>
-    <dimen name="small_icon_size">20dp</dimen>
-    <dimen name="pressure_icon_size">15dp</dimen>
     <dimen name="small_text_size">12sp</dimen>
 
     <dimen name="toolbar_text_size">22sp</dimen>
