--- a/app/src/main/res/layout/item_daily_forecast.xml
+++ b/app/src/main/res/layout/item_daily_forecast.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="3dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_daily_weather"
         android:layout_width="@dimen/daily_icon_size"
         android:layout_height="@dimen/daily_icon_size"
         android:layout_gravity="center"
+        android:layout_marginEnd="32dp"
         android:src="@drawable/ic_rainy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,20 +22,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="10dp"
-        android:fontFamily="sans-serif-medium"
+        android:layout_marginVertical="8dp"
+        android:layout_marginStart="16dp"
+        android:fontFamily="sans-serif-light"
         android:text="Thursday"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tv_probality_of_precipitation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
+        android:layout_marginStart="10dp"
         android:text="50%"
-        android:layout_marginStart="5dp"
         android:textColor="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_daily_weather"
@@ -46,13 +47,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:layout_marginEnd="10dp"
-        android:fontFamily="sans-serif-medium"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="sans-serif-light"
         android:text="22°"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_min_temp"
-        app:layout_constraintEnd_toStartOg="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -60,11 +60,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:layout_marginEnd="10dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="22°"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="sans-serif-light"
+        android:text="17°"
         android:textColor="@color/grey"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,10 +72,9 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginHorizontal="5dp"
         android:layout_marginTop="3dp"
         android:background="@color/grey"
-        android:layout_marginHorizontal="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
