--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="dark_orange">#803C08</color>
+    <color name="dark_orange">#B15815</color>
     <color name="orange">#D1591D</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#1C1C1C</color>
+    <color name="black">#232323</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="grey">#7C7C7C</color>
