--- a/app/src/main/res/layout/item_daily_forecast.xml
+++ b/app/src/main/res/layout/item_daily_forecast.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_probality_of_precipitation"
+        android:id="@+id/tv_probability_of_precipitation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -44,12 +44,12 @@
 
     <TextView
         android:id="@+id/tv_max_temp"
-        android:layout_width="wrap_content"
+        android:layout_width="40sp"
+        android:textAlignment="center"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="6dp"
         android:fontFamily="sans-serif-light"
-        android:text="22°"
+        android:text="-99°"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_min_temp"
@@ -57,12 +57,12 @@
 
     <TextView
         android:id="@+id/tv_min_temp"
-        android:layout_width="wrap_content"
+        android:layout_width="40sp"
+        android:textAlignment="center"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
         android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif-light"
-        android:text="17°"
+        android:text="-88°"
         android:textColor="@color/grey"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
