--- a/app/src/main/res/layout/item_hourly_forecast.xml
+++ b/app/src/main/res/layout/item_hourly_forecast.xml
@@ -1,38 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="center"
-    android:paddingHorizontal="@dimen/card_view_marginStartEnd"
-    android:paddingVertical="@dimen/card_view_content_paddingVertical">
+    android:paddingHorizontal="13dp">
 
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:includeFontPadding="false"
         android:text="15:00"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_weather"
-        android:layout_width="@dimen/medium_icon_size"
-        android:layout_height="@dimen/medium_icon_size"
-        android:src="@drawable/ic_partly_cloudy"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="42dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_min_temp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time" />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_time">
+
+        <ImageView
+            android:id="@+id/iv_weather"
+            android:layout_width="@dimen/medium_icon_size"
+            android:layout_height="@dimen/medium_icon_size"
+            android:src="@drawable/ic_partly_cloudy" />
+
+        <TextView
+            android:id="@+id/tv_probability_of_precipitation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="25%"
+            android:includeFontPadding="false"
+            android:textSize="10sp"
+            android:textColor="@color/blue" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_min_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="24 °C"
+        android:layout_marginBottom="6dp"
+        android:includeFontPadding="false"
         android:fontFamily="sans-serif-medium"
-        android:textSize="@dimen/hourly_text_size"/>
+        android:text="24 °C"
+        android:textSize="@dimen/hourly_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
