--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,12 +92,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                 tools:context=".ui.MainActivity">
 
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/card_view_marginStartEnd"
-                    android:layout_marginTop="@dimen/card_view_marginTop"
+                    android:layout_marginTop="24dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -110,45 +109,24 @@
                         android:textAlignment="textEnd"
                         android:textSize="@dimen/big_text_size" />
 
+                    <ImageView
+                        android:id="@+id/iv_current_weather"
+                        android:layout_width="@dimen/big_icon_size"
+                        android:layout_height="@dimen/big_icon_size"
+                        android:layout_marginStart="@dimen/common_marginStartEnd"
+                        android:layout_marginEnd="@dimen/id_image_marginEnd"
+                        android:contentDescription="@string/current_weather"
+                        android:src="@drawable/ic_partly_cloudy" />
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/iv_current_weather"
-                            android:layout_width="@dimen/big_icon_size"
-                            android:layout_height="@dimen/big_icon_size"
-                            android:layout_marginStart="@dimen/common_marginStartEnd"
-                            android:layout_marginEnd="@dimen/id_image_marginEnd"
-                            android:contentDescription="@string/current_weather"
-                            android:src="@drawable/ic_partly_cloudy" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/tv_current_weather"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="sans-serif-medium"
-                                android:text="Sunny"
-                                android:textSize="@dimen/value_text_size" />
-
-                            <TextView
-                                android:id="@+id/tv_current_weather_description"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Light air"
-                                android:textSize="@dimen/label_text_size" />
-                        </LinearLayout>
-                    </LinearLayout>
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_current_weather_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Light air"
+                    android:textSize="18dp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -166,6 +144,7 @@
                         android:id="@+id/tv_feels_like"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/grey"
                         android:text="Feels like 24°C"
                         android:textSize="@dimen/small_text_size" />
                 </LinearLayout>
@@ -174,7 +153,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="6dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="24dp"
                     app:cardCornerRadius="@dimen/card_view_corner_radius">
 
                     <LinearLayout
@@ -186,11 +165,11 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:layout_weight="1"
+                            android:gravity="center"
                             android:orientation="horizontal"
-                            android:paddingStart="10dp"
-                            android:paddingVertical="8dp">
+                            android:paddingVertical="8dp"
+                            android:paddingStart="10dp">
 
                             <ImageView
                                 android:id="@+id/iv_humidity"
@@ -236,11 +215,11 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:layout_weight="1"
+                            android:gravity="center"
                             android:orientation="horizontal"
-                            android:paddingStart="10dp"
-                            android:paddingVertical="8dp">
+                            android:paddingVertical="8dp"
+                            android:paddingStart="10dp">
 
                             <ImageView
                                 android:id="@+id/iv_clouds"
@@ -286,11 +265,11 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:layout_weight="1"
+                            android:gravity="center"
                             android:orientation="horizontal"
-                            android:paddingStart="10dp"
-                            android:paddingVertical="8dp">
+                            android:paddingVertical="8dp"
+                            android:paddingStart="10dp">
 
                             <ImageView
                                 android:id="@+id/iv_wind"
@@ -335,7 +314,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="6dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="6dp"
                     app:cardCornerRadius="@dimen/card_view_corner_radius">
 
                     <LinearLayout
@@ -347,10 +326,10 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:paddingVertical="8dp"
                             android:layout_weight="1"
+                            android:gravity="center"
                             android:orientation="horizontal"
+                            android:paddingVertical="8dp"
                             android:paddingStart="10dp">
 
                             <ImageView
@@ -397,11 +376,11 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:layout_weight="1"
+                            android:gravity="center"
                             android:orientation="horizontal"
-                            android:paddingStart="10dp"
-                            android:paddingVertical="8dp">
+                            android:paddingVertical="8dp"
+                            android:paddingStart="10dp">
 
                             <ImageView
                                 android:id="@+id/iv_sunrise"
@@ -448,11 +427,11 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:layout_weight="1"
+                            android:gravity="center"
                             android:orientation="horizontal"
-                            android:paddingStart="10dp"
-                            android:paddingVertical="8dp">
+                            android:paddingVertical="8dp"
+                            android:paddingStart="10dp">
 
                             <ImageView
                                 android:id="@+id/iv_sunset"
