--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,13 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="dark_orange">#B15815</color>
+
+    <color name="orange_dark">#B15815</color>
     <color name="orange">#D1591D</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+
+    <color name="yellow">#F3C028</color>
+    <color name="yellow_dark">#AC8B12</color>
+
     <color name="black">#232323</color>
     <color name="white">#FFFFFFFF</color>
 
