--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,8 +28,8 @@
     <dimen name="divider_height">1dp</dimen>
     <dimen name="divider_margin">26dp</dimen>
 
-    <dimen name="big_text_size">74sp</dimen>
-    <dimen name="small_text_size">14sp</dimen>
+    <dimen name="big_text_size">74dp</dimen>
+    <dimen name="small_text_size">14dp</dimen>
 
     <dimen name="toolbar_text_size">22dp</dimen>
     <dimen name="toolbar_icon_size">32dp</dimen>
