--- a/app/src/main/res/layout/item_daily_forecast.xml
+++ b/app/src/main/res/layout/item_daily_forecast.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/item_daily">
 
     <ImageView
         android:id="@+id/iv_daily_weather"
         android:layout_width="@dimen/daily_icon_size"
         android:layout_height="@dimen/daily_icon_size"
         android:layout_gravity="center"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="50dp"
         android:src="@drawable/ic_rainy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,12 +32,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/ic_expand_more"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_probability_of_precipitation"
-        android:layout_width="wrap_content"
+        android:layout_width="35dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="50%"
+        android:layout_marginStart="4dp"
+        android:textAlignment="center"
+        android:text="100%"
         android:textColor="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_daily_weather"
@@ -58,22 +69,36 @@
     <TextView
         android:id="@+id/tv_min_temp"
         android:layout_width="40sp"
-        android:textAlignment="center"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif-light"
         android:text="-88°"
+        android:layout_marginEnd="10dp"
+        android:textAlignment="center"
         android:textColor="@color/grey"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="3dp"
         android:background="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/ll_expandable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/divider"
+        android:orientation="vertical" >
+
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
