--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="dark_grey">#313131</color>
     <color name="blue">#2F8ACE</color>
 
+    <color name="on_click_grey">#6F818181</color>
+
 </resources>
