--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
 
     <dimen name="big_text_size">74dp</dimen>
     <dimen name="small_text_size">14dp</dimen>
+    <dimen name="smaller_text_size">13dp</dimen>
 
     <dimen name="toolbar_text_size">22dp</dimen>
     <dimen name="toolbar_icon_size">32dp</dimen>
