--- a/app/src/main/res/layout/item_daily_forecast.xml
+++ b/app/src/main/res/layout/item_daily_forecast.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_daily"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -37,7 +36,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iv_expand"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/ic_expand_more"
@@ -81,11 +80,10 @@
             android:textColor="@color/grey"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintEnd_toStartOf="@+id/iv_expand"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     <LinearLayout
         android:id="@+id/ll_expandable"
@@ -187,7 +185,7 @@
                 android:textSize="@dimen/smaller_text_size"/>
 
             <ImageView
-                android:id="@+id/iv_icon"
+                android:id="@+id/iv_weather_expand"
                 android:layout_width="@dimen/small_icon_size"
                 android:layout_height="@dimen/small_icon_size"
                 android:src="@drawable/ic_clear_sky" />
