--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="blue">#2F8ACE</color>
 
     <color name="on_click_grey">#6F818181</color>
+    <color name="red">#CC1609</color>
 
 </resources>
