--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -533,7 +533,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:maxWidth="200dp"
+        android:layout_marginHorizontal="40dp"
         android:text="@string/loading_your_forecast"
         android:textAlignment="center"
         android:textSize="16dp"
