Added methods to get current city

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
 
-    <color name="orange_dark">#B15815</color>
-    <color name="orange">#D1591D</color>
+    <color name="orange_dark">#984404</color>
+    <color name="orange">#B84F1A</color>
 
     <color name="yellow">#F3C028</color>
     <color name="yellow_dark">#AC8B12</color>
