Added current location display

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
 
     <color name="orange_dark">#984404</color>
     <color name="orange">#B84F1A</color>
+    <color name="orange_bright">#DA6225</color>
 
     <color name="yellow">#F3C028</color>
     <color name="yellow_dark">#AC8B12</color>
